added fall functionalities while pixel variance and diffusive net is conflicting

--- a/src/c++/RetinaNvsModel/.vscode/launch.json
+++ b/src/c++/RetinaNvsModel/.vscode/launch.json
@@ -14,7 +14,14 @@
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "lldb",
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
             "preLaunchTask": "C/C++: g++-11 build active file"
         }
     ]
