--- a/src/c++/RetinaNvsModel/.vscode/settings.json
+++ b/src/c++/RetinaNvsModel/.vscode/settings.json
@@ -11,6 +11,7 @@
         "tuple": "cpp",
         "utility": "cpp",
         "*.tcc": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "iostream": "cpp"
     }
 }
